--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,6 +3,7 @@
   <header class="topbar">
     <div class="topbar-inner container">
 
+      <!-- 左ナビ：ログイン後だけ表示 -->
       <nav class="nav-left" th:if="${session.loginUserId != null}">
         <a th:href="@{/home}" class="btn-link">Home</a>
         <a th:href="@{/favorites}" class="btn-link">お気に入り</a>
@@ -12,13 +13,13 @@
         <a th:href="@{/life}" class="btn-link">生活</a>
       </nav>
 
-      <div class="brand" th:if="${session.loginUserId != null}">
-        <a th:href="@{/home}" class="brand-link">OutputManager</a>
-      </div>
-      <div class="brand" th:if="${session.loginUserId == null}">
-        <span class="brand-link">OutputManager</span>
+      <!-- 中央ロゴ：ログイン後=リンク / ログイン前=非クリック要素 -->
+      <div class="brand">
+        <a th:if="${session.loginUserId != null}" th:href="@{/home}" class="brand-link">OutputManager</a>
+        <span th:if="${session.loginUserId == null}" class="brand-link not-clickable">OutputManager</span>
       </div>
 
+      <!-- 右：検索＆ログアウト（ログイン後だけ表示） -->
       <div class="nav-right" th:if="${session.loginUserId != null}">
         <form th:action="@{/outputs}" method="get" class="search-box">
           <input type="text" name="keyword" placeholder="キーワードで検索" aria-label="検索">
